# acdc-botnet

./: .ci-test  .gitignore  .woodpecker.yml  Cargo.toml  DEPLOYMENT_STATUS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.md  README.md  SETUP_SUMMARY.md  setup-github.sh
.forgejo/workflows/: ci.yml
.woodpecker/: build.yml  mirror-sync.yml
config/: gauntlet-genesis.yaml  gauntlet-light-genesis.yaml  gauntlet-light-orchestrator.yaml  testnet-bot-wallets.json  testnet_minimal.yaml
crates/behaviors/: Cargo.toml
crates/behaviors/src/: adversarial.rs  anti_patterns.rs  legitimate.rs  lib.rs
crates/behaviors/src/adversarial/: byzantine.rs  cross_chain.rs  governance.rs  mev.rs  privacy.rs  resource.rs
crates/behaviors/src/anti_patterns/: boundaries.rs  prerequisites.rs  state.rs  timing.rs  type_confusion.rs  validation.rs
crates/behaviors/src/legitimate/: cross_chain.rs  governance.rs  privacy.rs  trading.rs  validator.rs
crates/bot/: Cargo.toml
crates/bot/src/: actor.rs  communication.rs  context.rs  error.rs  identity.rs  lib.rs  scheduler.rs  state.rs  wallet.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/distributed/: Cargo.toml  build.rs
crates/distributed/src/: coordinator.rs  fault_tolerance.rs  lib.rs  protocol.rs  registry.rs  scheduling.rs  worker.rs
crates/integration/: Cargo.toml
crates/integration/src/: adnet_client.rs  alphaos_client.rs  deltaos_client.rs  lib.rs  trace_verifier.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: aggregator.rs  event.rs  exporter.rs  lib.rs  prometheus.rs  recorder.rs
crates/roles/: Cargo.toml
crates/roles/src/: gauntlet_bots.rs  general_user.rs  governor.rs  lib.rs  trader.rs
crates/scenarios/: Cargo.toml
crates/scenarios/src/: assertions.rs  byzantine_tests.rs  lib.rs  loader.rs  mock_validator.rs  runner.rs
docs/: API.md  DEPLOYMENT.md  DESIGN.md  MECE_ANALYSIS.md  PERFORMANCE.md  PROMETHEUS.md  RESOURCE_MANAGEMENT.md
gauntlet-output/: gauntlet-phase-0-20260329-193805.yaml  tn006-light-run2-20260331.yaml  tn006-light-uat-run6-20260403.yaml
proto/: bot_orchestration.proto
research/: adversarial-patterns-research.md  anti-patterns-research.md  legitimate-patterns-research.md
scenarios/: README.md
scenarios/chaos/: byzantine_fault_tolerance.yaml  coordinator_crash_recovery.yaml  deep_reorg_exploitation.yaml  ipc_delay_injection.yaml  network_partition.yaml  packet_loss_network_faults.yaml  validator_crash_cascade.yaml
scenarios/functional/: ax_dx_flows.yaml  basic_tx.yaml  cross_chain_stress.yaml  d007_offram_kyc.yaml  daily_network_ops.yaml  dex_trading_session.yaml  gid_all_functions.yaml  gid_bridge_delta.yaml  gid_mint_flow.yaml  governance_lifecycle.yaml  governance_upgrade_tiered.yaml  governor_bond_no_rewards.yaml  mempool_saturation.yaml  name_service_auction.yaml  privacy_operations.yaml  validator_operations.yaml  validator_owner_bond_and_claim.yaml
scenarios/gauntlet/: gauntlet_adl_panics.yaml  gauntlet_name_renew_schnorr.yaml  gauntlet_peer_auth_grumpkin.yaml  gauntlet_rate_limit.yaml  gauntlet_skey2_challenge.yaml  gauntlet_t012_epoch_liquidation.yaml  phase_0.yaml  phase_0_light.yaml  phase_1.yaml  phase_2.yaml  phase_3.yaml  phase_4.yaml  phase_5.yaml  phase_6.yaml  phase_9.yaml
scenarios/integration/: boundary_edge_cases.yaml  byzantine_equivocation.yaml  double_spend_prevention.yaml  front_running_detection.yaml  gid_rejection_test.yaml  insufficient_balance_error.yaml  sybil_attack_detection.yaml  wrong_chain_rejection.yaml
scenarios/load/: concurrent_governance.yaml  dex_orderbook_stress.yaml  high_tps.yaml  mempool_saturation.yaml  sustained_load_48h.yaml
scenarios/ops/: gid_genesis_register.yaml  gid_multisig_ops.yaml
scenarios/security/: api_surface_audit.yaml  bridge_deep_attack.yaml  byzantine_validators.yaml  consensus_equivocation.yaml  cross_chain_double_spend.yaml  cryptographic_audit.yaml  eclipse_attack.yaml  frozen_heart_soundness.yaml  governance_manipulation.yaml  infrastructure_audit.yaml  long_range_attack.yaml  mev_extraction.yaml  oracle_manipulation.yaml  pool_dos_extreme_heights.yaml  privacy_leakage.yaml  prover_attack.yaml  replay_attack.yaml  resource_exhaustion.yaml  state_integrity_audit.yaml
scenarios/unit/: cross_chain_lock_mint.yaml  governance_vote.yaml  limit_order_lifecycle.yaml  rewards_claim.yaml  shielded_transfer.yaml  spot_market_order.yaml  validator_block_proposal.yaml
scripts/: deploy_population.py  fund_accounts.py  gauntlet_phase0.py
systemd/: acdc-botnet-coordinator.service  acdc-botnet-worker@.service  install.sh  worker.conf.example
tools/: assertions.py  behaviors.py  key_loader.py  network_client.py  run-suite.py  scenario_runner.py
tools/tests/: conftest.py  test_assertions.py  test_behaviors.py  test_key_loader.py  test_run_suite.py  test_scenario_runner.py
