[workspace]
resolver = "2"
members = [
    "crates/bot",
    "crates/roles",
    "crates/behaviors",
    "crates/integration",
    "crates/metrics",
    "crates/scenarios",
    "crates/distributed",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://source.ac-dc.network/alpha-delta-network/adnet-testbots"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Distributed architecture (gRPC)
tonic = "0.10"
prost = "0.12"
tonic-build = "0.10"

# HTTP clients
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Metrics & observability
prometheus = "0.13"
hdrhistogram = "7.5"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptography (Alpha/Delta integration)
blake2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
bech32 = "0.9"

# Testing
proptest = "1.4"
criterion = "0.5"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
parking_lot = "0.12"
indexmap = "2.1"
