[package]
name = "adnet-testbot-roles"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
adnet-testbot = { path = "../bot" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Utilities
rand = { workspace = true }

# Cryptography (for GovernorBot ed25519 signing)
ed25519-dalek = { workspace = true }
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
