[package]
name = "adnet-testbot-scenarios"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
adnet-testbot = { path = "../bot" }
adnet-testbot-roles = { path = "../roles" }
adnet-testbot-behaviors = { path = "../behaviors" }
adnet-testbot-metrics = { path = "../metrics" }
adnet-testbot-integration = { path = "../integration" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
